Try different blurring approach to fix white border on iOS Safari

--- a/css/promo-styles.css
+++ b/css/promo-styles.css
@@ -45,7 +45,7 @@ table {
 /* End Style Reset */
 
 
-body:before {
+#blurred-background {
     content: "";
     background-image: url('https://thecharmingtools.com/assets/img/tct-4.webp');
     background-size: cover;
@@ -56,8 +56,17 @@ body:before {
     right: 0;
     bottom: 0;
     z-index: -1;
-    filter: blur(35px);
     margin: -55px;
+}
+
+#blurred-background:after {
+    backdrop-filter: blur(35px);
+    -webkit-backdrop-filter: blur(35px);
+    pointer-events: none;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 #content-wrapper {
